force-app/main/default/objects/Address_Book__c/Address_Book__c.object-meta.xml
<CustomObject>
    <label>Address Book</label>
    <nameField>
        <label>Address Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>