force-app/main/default/objects/Address_Book__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent customer who is creating the address</inlineHelpText>
    <label>Customer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Address_Books</relationshipName>
    <type>Lookup</type>
</CustomField>