force-app/main/default/objects/Address_Book__c/validationRules/UserMustBePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>UserMustBePopulated</fullName>
    <active>true</active>
    <description>While Creating/updating the Address Book record Check if the User is blank then Throw Error</description>
    <errorConditionFormula>ISBLANK(Customer__c)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>While Creating/updating the Address Book record Check if the User is blank then Throw Error</errorMessage>
</ValidationRule>